enhanced ui, still having a problem which is not drawing the 'x' or 'o' when it is the winning move, ---wasted hours: +2h

--- a/index.html
+++ b/index.html
@@ -7,10 +7,21 @@
     <link href="styles.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-   <div class="container">
-     <h1 class="turn"></div>
-     <div class="board"></div>
-   </div>
+    <section>
+        <div class="container">
+            <h1 class="welcome">Welcome to Tic Tac Toe Game</h1>
+            <div class="choice">
+                <div class="player o">X</div>
+                <div class="player x">O</div>
+            </div>
+       </div>
+       <div class="board"></div>
+       <div class="result">
+            <h1 class="turn"></div>
+            <button class="again">Play again</button>
+       </div>
+       
+    </section>
     <script src="script.js"></script>
   </body>
 </html>
